[package]
name = "wwz-rs"
version = "0.1.0"
authors = ["Colin Dean <git@cad.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for reading out of zip files easily
mini-fs = "*"
# async
tokio = { version = "0.2", features = ["full"] }
# web server
warp = "0.2.5"

